--- a/README.html
+++ b/README.html
@@ -713,10 +713,11 @@ Earthquakes in Mexico Since 2000</h3>
 earthquakes in Mexico since the year 2000 and visualizes them on a
 leaflet map. Each earthquake is represented by a circle on the map, with
 the circle’s radius proportional to the earthquake’s magnitude. The
-pop-up for each circle displays the date of the earthquake.
-eq_clean_data(“../inst/extdata/earthquakes.tsv”) %&gt;%
-eq_location_clean() %&gt;% filter(country==“MEXICO” &amp;
-lubridate::year(date) &gt;= 2000) %&gt;% eq_map(annot_col = “date”)</p>
+pop-up for each circle displays the date of the earthquake.</p>
+<pre><code>eq_clean_data(&quot;../inst/extdata/earthquakes.tsv&quot;) %&gt;%
+  eq_location_clean() %&gt;%
+  filter(country==&quot;MEXICO&quot; &amp; lubridate::year(date) &gt;= 2000) %&gt;%
+  eq_map(annot_col = &quot;date&quot;)</code></pre>
 <h3 id="visualize-earthquakes-in-mexico-since-2000-with-custom-annotations">Visualize
 Earthquakes in Mexico Since 2000 with Custom Annotations</h3>
 <p>This function filters the cleaned earthquake data to include only
@@ -724,10 +725,8 @@ earthquakes in Mexico since the year 2000. It then creates custom
 annotations for each earthquake, including information about the
 location, magnitude, and total deaths. These annotations are added to
 the leaflet map, providing more detailed information when a user
-interacts with the map. eq_clean_data(“../inst/extdata/earthquakes.tsv”)
-%&gt;% eq_location_clean() %&gt;% filter(country==“MEXICO” &amp;
-lubridate::year(date) &gt;= 2000) %&gt;% mutate(popup_text =
-eq_create_label(.)) %&gt;% eq_map(annot_col = “popup_text”)</p>
+interacts with the map.
+<code>eq_clean_data(&quot;../inst/extdata/earthquakes.tsv&quot;) %&gt;%   eq_location_clean() %&gt;%   filter(country==&quot;MEXICO&quot; &amp; lubridate::year(date) &gt;= 2000) %&gt;%   mutate(popup_text =  eq_create_label(.)) %&gt;%   eq_map(annot_col = &quot;popup_text&quot;)</code></p>
 
 </body>
 </html>
