--- a/README.html
+++ b/README.html
@@ -725,8 +725,12 @@ earthquakes in Mexico since the year 2000. It then creates custom
 annotations for each earthquake, including information about the
 location, magnitude, and total deaths. These annotations are added to
 the leaflet map, providing more detailed information when a user
-interacts with the map.
-<code>eq_clean_data(&quot;../inst/extdata/earthquakes.tsv&quot;) %&gt;%   eq_location_clean() %&gt;%   filter(country==&quot;MEXICO&quot; &amp; lubridate::year(date) &gt;= 2000) %&gt;%   mutate(popup_text =  eq_create_label(.)) %&gt;%   eq_map(annot_col = &quot;popup_text&quot;)</code></p>
+interacts with the map.</p>
+<pre><code>eq_clean_data(&quot;../inst/extdata/earthquakes.tsv&quot;) %&gt;%
+  eq_location_clean() %&gt;%
+  filter(country==&quot;MEXICO&quot; &amp; lubridate::year(date) &gt;= 2000) %&gt;%
+  mutate(popup_text =  eq_create_label(.)) %&gt;%
+  eq_map(annot_col = &quot;popup_text&quot;)</code></pre>
 
 </body>
 </html>
